src/main/java/AST/MyLang.java
package AST;

import java.io.ByteArrayInputStream;
import java.util.ArrayList;
import java.util.List;

import org.llvm.*;

/* Generated By:JJTree&JavaCC: Do not edit this line. MyLang.java */
/** An Arithmetic Grammar. */
public class MyLang/* @bgen(jjtree) */ implements MyLangTreeConstants,
		MyLangConstants {/* @bgen(jjtree) */
	protected static JJTMyLangState jjtree = new JJTMyLangState();
	/** Main entry point. */

	public static Module module = null;
	public static Builder builder = null;

	public static void InitialSetting(ASTContext context) throws Exception {
		TypeRef ty_print = TypeRef.functionType(ty_int, TypeRef.int8Type().pointerType());
		Value printf = module.addFunction("printf", ty_print);

		TypeRef outputType = TypeRef.functionType(ty_int, ty_int);
		// output int
		Value outputD = module.addFunction("outputD", outputType);
		BasicBlock bb = outputD.appendBasicBlock("entry");
		List<Integer> argType = new ArrayList<Integer>();
		argType.add(INTEGER_LITERAL);
		context.put("outputD", outputD, INTEGER_LITERAL, argType);
		builder.positionBuilderAtEnd(bb);
		Value argC = builder.buildGlobalString("%c", "argD");
		Value argD = builder.buildGlobalString("%d", "argD");
		Value[] values = { argD, outputD.getFirstParam() };
		Value ret = builder.buildCall(printf, "ret", values);
		builder.buildRet(ret);
		
		// output char
		Value output = module.addFunction("output", outputType);
		bb = output.appendBasicBlock("entry");
		context.put("output", output, INTEGER_LITERAL, argType);
		builder.positionBuilderAtEnd(bb);
		Value arg = Value.constIntCast(output.getFirstParam(), TypeRef.int8Type(), false);
		values[0] = argC;
		values[1] = arg;
		builder.buildRet(builder.buildCall(printf, "ret", values));
		
		// output float
		Value outputF = module.addFunction("outputF", outputType);
		bb = outputF.appendBasicBlock("entry");
		argType = new ArrayList<Integer>();
		argType.add(FLOAT_LITERAL);
		context.put("outputF", outputF, INTEGER_LITERAL, argType);
		builder.positionBuilderAtEnd(bb);
		Value argF = builder.buildGlobalString("%f", "argF");
		Value[] valueF = { argF, outputF.getFirstParam() };
		ret = builder.buildCall(printf, "ret", valueF);
		builder.buildRet(ret);
		
		// output new line
		Value outputN = module.addFunction("outputN", outputType);
		bb = outputN.appendBasicBlock("entry");
		List<Integer> argTypeN = new ArrayList<Integer>();
		argTypeN.add(VOID);
		context.put("outputN", outputN, INTEGER_LITERAL, argTypeN);
		builder.positionBuilderAtEnd(bb);
		values[0] = argC;
		values[1] = TypeRef.int8Type().constInt('\n', false);
		builder.buildRet(builder.buildCall(printf, "ret", values));
	}

	public static void main(String[] args) {
		try {
			MyLang t = new MyLang(new ByteArrayInputStream(args[0].getBytes()));

			module = Module.createWithName("test");
			builder = Builder.createBuilder();
			ASTContext context = new ASTContext(null, null, null);
			InitialSetting(context);
			module = Module.createWithNameInContext("module", module.getModuleContext());
			TypeRef ty_void = TypeRef.voidType();
			TypeRef ty_func = TypeRef.functionType(ty_int, ty_void);
			Value f_main = module.addFunction("main", ty_func);
			context.entry = f_main.appendBasicBlock("entry");
			builder.positionBuilderAtEnd(context.entry);
			context.func = new ASTContent(f_main, FLOAT_LITERAL);
			ASTstart n = t.Start();
			//n.dump("");
			n.code_gen(context);

			builder.buildRet(RealZero);
			module.dumpModule();

			// Create an execution engine.
			ExecutionEngine ee = ExecutionEngine.createForModule(module);
			// The arguments need to be passed as "GenericValue" objects.
			boolean isSign = true;
			// Compile and run!
			GenericValue retval = ee.runFunction(f_main, GenericValue.createPtr(null));
			//System.out.println("ans=" + retval.toFloat(ty_real));

		} catch (Exception e) {
			System.out.println("Oops.");
			System.out.println(e.getMessage());
			e.printStackTrace();
		}
	}

/** Main production. */
  static final public ASTstart Start() throws ParseException {
                           /*@bgen(jjtree) start */
  ASTstart jjtn000 = new ASTstart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      procedure();
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void procedure() throws ParseException {
                             /*@bgen(jjtree) program */
  ASTprogram jjtn000 = new ASTprogram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PROGRAM);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DEFINE:
        case TYPE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TYPE:
          class_declaration();
          break;
        case DEFINE:
          declaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(BEGIN);
      block();
      jj_consume_token(END);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void block() throws ParseException {
                       /*@bgen(jjtree) block */
  ASTblock jjtn000 = new ASTblock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
        case SEMICOlON:
        case WHILE:
        case FOR:
        case CONTINUE:
        case BREAK:
        case FOREACH:
        case IF:
        case NOT:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case BOOLEAN_LITERAL:
        case NULL_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case IDENTIFIER:
        case 57:
        case 60:
        case 70:
        case 71:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        statement();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      return_statement();
      break;
    case SEMICOlON:
    case NOT:
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case BOOLEAN_LITERAL:
    case NULL_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case 57:
    case 60:
    case 70:
    case 71:
      common_statement();
      break;
    case WHILE:
      while_statement();
      break;
    case FOR:
      for_statement();
      break;
    case CONTINUE:
      continue_statement();
      break;
    case BREAK:
      break_statement();
      break;
    case FOREACH:
      foreach_statement();
      break;
    case IF:
      ifthen_statement();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ifthen_statement() throws ParseException {
                                      /*@bgen(jjtree) ifthenstm */
  ASTifthenstm jjtn000 = new ASTifthenstm(JJTIFTHENSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      expression();
      jj_consume_token(THEN);
      block();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        block();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(ENDIF);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void foreach_statement() throws ParseException {
                                        /*@bgen(jjtree) foreachstm */
  ASTforeachstm jjtn000 = new ASTforeachstm(JJTFOREACHSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOREACH);
      Identifier();
      jj_consume_token(IN);
      expression();
      jj_consume_token(DO);
      block();
      jj_consume_token(ENDFORE);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void continue_statement() throws ParseException {
                                                 /*@bgen(jjtree) continuestm */
  ASTcontinuestm jjtn000 = new ASTcontinuestm(JJTCONTINUESTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONTINUE);
      jj_consume_token(SEMICOlON);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void break_statement() throws ParseException {
                                    /*@bgen(jjtree) breakstm */
  ASTbreakstm jjtn000 = new ASTbreakstm(JJTBREAKSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BREAK);
      jj_consume_token(SEMICOlON);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void for_statement() throws ParseException {
                                /*@bgen(jjtree) forstm */
  ASTforstm jjtn000 = new ASTforstm(JJTFORSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      Identifier();
      jj_consume_token(EQUAL);
      expression();
      jj_consume_token(TO);
      expression();
      jj_consume_token(DO);
      block();
      jj_consume_token(ENDFOR);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void while_statement() throws ParseException {
                                    /*@bgen(jjtree) whilestm */
  ASTwhilestm jjtn000 = new ASTwhilestm(JJTWHILESTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      expression();
      jj_consume_token(DO);
      block();
      jj_consume_token(ENDWHILE);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void return_statement() throws ParseException {
                                      /*@bgen(jjtree) returnstm */
  ASTreturnstm jjtn000 = new ASTreturnstm(JJTRETURNSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      expression();
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void common_statement() throws ParseException {
                                      /*@bgen(jjtree) commonstm */
  ASTcommonstm jjtn000 = new ASTcommonstm(JJTCOMMONSTM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case BOOLEAN_LITERAL:
      case NULL_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
      case 57:
      case 60:
      case 70:
      case 71:
        expression();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void class_declaration() throws ParseException {
                                               /*@bgen(jjtree) class_declaration */
  ASTclass_declaration jjtn000 = new ASTclass_declaration(JJTCLASS_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TYPE);
      Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTEND:
        jj_consume_token(EXTEND);
        Identifier();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(IS);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        if (jj_2_1(3)) {
          function_declaration();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            variable_declaration();
            break;
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(ENDTYPE);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void declaration() throws ParseException {
                                   /*@bgen(jjtree) declaration */
  ASTdeclaration jjtn000 = new ASTdeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DEFINE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        if (jj_2_2(3)) {
          function_declaration();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            variable_declaration();
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(ENDDEF);
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void function_declaration() throws ParseException {
                                                 /*@bgen(jjtree) func_declaration */
  ASTfunc_declaration jjtn000 = new ASTfunc_declaration(JJTFUNC_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 57:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        jj_consume_token(57);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          declaration_kind();
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 58:
              ;
              break;
            default:
              jj_la1[12] = jj_gen;
              break label_6;
            }
            jj_consume_token(58);
            declaration_kind();
          }
          jj_consume_token(AS);
          Type();
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(59);
      }
      jj_consume_token(AS);
      jj_consume_token(FUNCTION);
      jj_consume_token(RETURN);
      Type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IS:
        jj_consume_token(IS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DEFINE:
          jj_consume_token(DEFINE);
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFIER:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_7;
            }
            if (jj_2_3(3)) {
              variable_declaration();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IDENTIFIER:
                function_declaration();
                break;
              default:
                jj_la1[15] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
          jj_consume_token(ENDDEF);
          jj_consume_token(SEMICOlON);
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        block();
        jj_consume_token(ENDFUNC);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void variable_declaration() throws ParseException {
                                                /*@bgen(jjtree) var_declaration */
  ASTvar_declaration jjtn000 = new ASTvar_declaration(JJTVAR_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      declaration_kind();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_8;
        }
        jj_consume_token(58);
        declaration_kind();
      }
      jj_consume_token(AS);
      Type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IS:
        jj_consume_token(IS);
        ExpressionList();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOlON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
